// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 45,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 12,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 2.36,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 147,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 33,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 294,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 3,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1399999999999997,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 190,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 13,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 12,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1199999999999997,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14.5,
  "healMult": 1.1725,
  "hp": 640,
  "intStat": 148,
  "magicAtk": 33,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 29,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 23,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 12,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 21.25,
  "critMult": 2.84,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59.5,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 18,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 119,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 15,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1799999999999997,
  "critResistPct": 1.5,
  "def": 25,
  "evasionPct": 3.7,
  "extraAttackChancePct": 15,
  "healMult": 1.7175000000000002,
  "hp": 795,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 795,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 39,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 13,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.3859999999999997,
  "critResistPct": 1.5,
  "def": 13,
  "evasionPct": 3.7,
  "extraAttackChancePct": 13.5,
  "healMult": 1.2575,
  "hp": 680,
  "intStat": 15,
  "magicAtk": 19,
  "magicDef": 7,
  "maxHp": 680,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 27,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a340acabe30fe09800e7bef6d2babc06a69ae867",
    "outcome": "win",
    "playerHp": 680,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "2004504d606da33da1bae62bf795b582c2ef6dff",
    "outcome": "win",
    "playerHp": 672,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "1cddb10907ab7c3e98127b2369c48927372cb535",
    "outcome": "win",
    "playerHp": 524,
    "playerMp": 227,
    "turns": 46,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "8face053f0ce0185d30e692fcaceec1fde5ae504",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "6f52f2d94e6e181578a3ef504f5bd5aca7ad54cb",
    "outcome": "win",
    "playerHp": 370,
    "playerMp": 501,
    "turns": 65,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "5ef88e608a61946d65da5bfa3a65d4e8f2ba360e",
    "outcome": "win",
    "playerHp": 619,
    "playerMp": 227,
    "turns": 543,
  },
  {
    "enemyHp": 214,
    "label": "heal_vs_들소_boss",
    "logSha": "55ae43e4ba3ea083f5006496904a4fb5c4524a0c",
    "outcome": "lose",
    "playerHp": 795,
    "playerMp": 227,
    "turns": 257,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "7ce86f2f3af4744bb906b1258e92b1181ae8aa25",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 463,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "eb7c4aa3518039b82055cc20f4511c84f92b9eb3",
    "outcome": "win",
    "playerHp": 188,
    "playerMp": 92,
    "turns": 27,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "af4b6b4ac1800c03ae31ea10a8c77289959e6bbf",
    "outcome": "p1_win",
    "turns": 99,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "7c9a6e6d626582835dd031182f64a1a98578018a",
    "outcome": "p1_win",
    "turns": 65,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "d6d077bcf95f6fa5da4cd3bd1e1c46c8bf9f9464",
    "outcome": "p2_win",
    "turns": 222,
  },
]
`;
